# space_ship

./: .gitignore  AutoGenerated_MovableAdapter.h  CMakeLists.txt  burnFuelCommand.h  changeVelocity.h  checkFuelCommand.h  exception_queue.h  ioc.h  macroCommand.h  main.cpp  movable.h  moveWithFuel.h  movement.h  preprocessor.h  rotateAndChangeVelocity.h  rotation.h  safequeue.h  spaceship.h  test_main.cpp  vector.h
.github/workflows/: c-cpp.yml
